src/objects/SectionStatus__c.object
<CustomObject>
    <description>Used to support the evaluation of the completeness of sections within an Assessment Template.</description>
    <fields>
        <fullName>Account_to_SectionStatus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the lookup object that will be used in a survey.So we are not using user but accounts to create number of surveys.The no of surveys would be same as no of accounts whose craete_survey field(on Account object) is set to true</description>
        <inlineHelpText>This is the lookup object that will be used in a survey.So we are not using user but accounts to create number of surveys.The no of surveys would be same as no of accounts whose craete_survey field(on Account object) is set to true</inlineHelpText>
        <label>Account to SectionStatus</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SectionStatus</relationshipLabel>
        <relationshipName>SectionStatus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Issue/Request</label>
        <referenceTo>IssueRequest_Life_Cycle__c</referenceTo>
        <relationshipLabel>SectionStatus</relationshipLabel>
        <relationshipName>SectionStatus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Section_StatusLabel__c</fullName>
        <inlineHelpText>copy the section label from section table here</inlineHelpText>
        <label>Section Status Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>section table id in section status table</inlineHelpText>
        <label>Section Template</label>
        <referenceTo>Section_Template__c</referenceTo>
        <relationshipLabel>SectionStatus</relationshipLabel>
        <relationshipName>SectionStatus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Status External Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;Incomplete&quot;</defaultValue>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SectionStatus</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SectionStatus</label>
    <nameField>
        <displayFormat>Status-{0}</displayFormat>
        <label>SectionStatus Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SectionStatus</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>